# StreamDiffusionV2

./: pyproject.toml
demo/: config.py  main.py  start.sh  vid2vid.py
docs/: semantic-avatar-bridge.md  semantic-avatar-integration-plan.md  semantic-avatar-realtime.md
semantic_avatar/: __init__.py  adapter.py  face_expression_encoder.py  identity_lock.py  pose_map.py  schema.py  semantic_adapter.py  semantic_face_encoder.py  semantic_metrics.py  semantic_mouth_conditioner.py  semantic_pose.py  semantic_renderer.py  semantic_ws.py  video_ws.py
streamv2v/: inference.py  inference_wo_batch.py
